--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <!-- <script src="./scripts/index.js"></script> -->
   <script type="text/javascript" src="./scripts/data.js" ></script>
-  <script type="text/javascript" src="./scripts/index.js"> </script>
+  <script type="text/javascript" src="./scripts/index.js"></script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Ftd85SKpFEYBCJSzuOXK3zPgrCD5UdE&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
   </script>
   </body>
 
